  to the local alias.
* (bug 24296) Added converttitles parameter to convert titles to their 
  canonical language variant.
* Fixed "link" parameter in image links with "thumb" parameter.
* (bug 23936) Add "displaytitle" to query/info API
* (bug 24485) Make iwbacklinks a generator, optionally display iwprefix and iwtitle

=== Languages updated in 1.17 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Moroccan Spoken Arabic (ary) (new)
* Banjar (bjn) (new)
* Kabardian (kdb) (new, dummy)
* Kabardian (Cyrillic) (kbd-cyrl) (new)
* Latgalian (ltg) (new)
* Dutch (informal) (nl-informal) (new)
* Rusyn (rue) (new)

* (bug 23156) Commafy and search normalization updated for Belarusian
  (Taraškievica)
* (bug 23283) Native name for Old English -> Ænglisc
* (bug 23364) Native name for Azerbaijani -> Azərbaycanca

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===
